english evry ware

--- a/index.html
+++ b/index.html
@@ -1384,5 +1384,6 @@
     <button id="scrollToTopBtn" title="Go to top">↑</button>
 
     <script src="script/goUpButton.js"></script>
+    <script src="script/nav-ish.js"></script>
 </body>
 </html>
