--- a/specific-tabs/qanater.html
+++ b/specific-tabs/qanater.html
@@ -16,7 +16,34 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <div class="page-wrapper">
+
+        <link rel="stylesheet" href="../css/headerCss.css">
+        <link rel="stylesheet" href="../css/navCss.css">
+        <link rel="stylesheet" href="../css/main.css">
+        <div style="display: flex; gap: 20px;align-items: center; z-index: 11111;">
+            <input style="position: fixed;top: 20px;left: 20px;z-index: 11111;background-color: #00a624;" type="checkbox" class="theme-toggle pc" id="themeToggle">
+            
+            <div style="z-index: 111111;left: 3rem;" class="setting-tab" id="setting-tab">
+                <h3>اللغة</h3>
+                <div style="display: flex;gap: 17px;justify-content: space-around;">
+                    <button class="arabic" onclick="addarabic()">اللغة العربية</button>
+                    <button class="english" onclick="addenglish()">english</button>
+                </div>
+                
+                <h3>الالوان</h3>
+                <div style="display: flex;gap: 17px;justify-content: space-around;">
+                    <button class="light">light</button>
+                    <button class="dark">dark</button>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+    <div class="page-wrapper arabicMAIN">
         <main class="content">
             <div class="opera-frame">
                 <img src="../imgs/qanater.jpg" class="opera-image">
@@ -94,6 +121,78 @@ src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3408.917612280583!2d3
             </div>
         </main>
     </div>
+
+<div class="page-wrapper englishMAIN">
+    <main class="content">
+        <div class="opera-frame">
+            <img src="../imgs/qanater.jpg" class="opera-image">
+        </div>
+
+        <h1 class="h11">Edfina Barrages (Qanater Edfina)</h1>
+        <h1 class="h11" style="font-size: 18px;color: #494949;">قناطر إدفينا</h1>
+        <section class="details">
+
+            <div class="detail-card">
+                <h2><i class="fas fa-water"></i> Edfina Barrages</h2>
+                <p>
+                    The main passage connecting the governorates of Kafr El Sheikh, Beheira, and Alexandria, and the only barrages that separate the waters of the Rosetta Branch of the Nile from the Mediterranean Sea.
+                </p>
+            </div>
+
+            <div class="detail-card">
+                <h2><i class="fas fa-history"></i> History</h2>
+                <p>
+                    The construction of the Edfina Barrages began in 1949 and they were inaugurated by Mostafa El-Nahas Pasha, the Prime Minister of Egypt, in 1951, making them an important part of the irrigation and navigation system in the Nile Delta.
+                </p>
+            </div>
+
+            <div class="detail-card">
+                <h2><i class="fas fa-map-marked-alt"></i> Location</h2>
+                <p>
+                    The barrages are located at the end of Edfina village, Rosetta Center, 20 km south of Rosetta city in Beheira Governorate, near the city of Motoubes and Abyana village.
+                </p>
+            </div>
+
+            <div class="detail-card">
+                <h2><i class="fas fa-tree"></i> Facilities and Gardens</h2>
+                <p>
+                    The barrages feature extensive gardens on the left and right banks, covering areas up to 100 feddans (acres), including green spaces, nurseries for plants and flowers, fountains and basins, and are planted with citrus and fruit trees.
+                </p>
+            </div>
+
+        </section>
+
+
+        <section class="details pc">
+            <div style="width: 100%;">
+                <iframe 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3408.917612280583!2d30.518633524939336!3d31.306022157701857!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14f68aa61cb62ba9%3A0xd144e185aa0bad52!2z2YLZhtin2LfYsSDYpdiv2YHZitmG2KfYjCDYr9mK2KjZitiMINmF2LHZg9iyINix2LTZitiv2Iwg2YXYrdin2YHYuNipINin2YTYqNit2YrYsdipIDU5NjQxMTM!5e0!3m2!1sar!2seg!4v1765465752546!5m2!1sar!2seg"
+                    width="100%" 
+                    height="450" 
+                    style="border:0; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.1);" 
+                    allowfullscreen="" 
+                    loading="lazy" 
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
+        </section>
+
+
+        <div class="back-section">
+            <a href="../index.html#qanater" class="back-btn">
+                <i class="fas fa-arrow-right"></i> Back to the Main Tour
+            </a>
+        </div>
+    </main>
+</div>
+
+
+
+
+
+
+
+    <script src="../script/nav-ish.js"></script>
 
 </body>
 </html>
