--- a/specific-tabs/arab-kaly.html
+++ b/specific-tabs/arab-kaly.html
@@ -16,7 +16,102 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <div class="page-wrapper">
+        <link rel="stylesheet" href="../css/headerCss.css">
+        <link rel="stylesheet" href="../css/navCss.css">
+        <link rel="stylesheet" href="../css/main.css">
+        <div style="display: flex; gap: 20px;align-items: center; z-index: 11111;">
+            <input style="position: fixed;top: 20px;left: 20px;z-index: 11111;background-color: #00a624;" type="checkbox" class="theme-toggle pc" id="themeToggle">
+            
+            <div style="z-index: 111111;left: 3rem;" class="setting-tab" id="setting-tab">
+                <h3>اللغة</h3>
+                <div style="display: flex;gap: 17px;justify-content: space-around;">
+                    <button class="arabic" onclick="addarabic()">اللغة العربية</button>
+                    <button class="english" onclick="addenglish()">english</button>
+                </div>
+                
+                <h3>الالوان</h3>
+                <div style="display: flex;gap: 17px;justify-content: space-around;">
+                    <button class="light">light</button>
+                    <button class="dark">dark</button>
+                </div>
+            </div>
+        </div>
+
+
+
+<div class="page-wrapper englishMAIN">
+    <main class="content">
+        <div class="opera-frame">
+            <img src="../imgs/arab-kaly.jpg" class="opera-image">
+        </div>
+
+        <h1 class="h11">Arab Kaly House</h1>
+        <h1 class="h11" style="font-size: 18px;color: #494949;">منزل عرب كلى</h1>
+        <section class="details">
+
+            <div class="detail-card">
+                <h2><i class="fas fa-landmark"></i> Arab Kaly House / Rosetta National Museum</h2>
+                <p>
+                    Arab Kaly House is considered one of the largest remaining houses in the city of Rosetta (Rashid), and was chosen to be a military museum to commemorate the victory of the valiant city over the Fraser Campaign in 1807 CE.
+                    The museum symbolizes the city's resistance and the delay of the British entry into Egypt until 1882 CE.
+                </p>
+            </div>
+
+            <div class="detail-card">
+                <h2><i class="fas fa-history"></i> History and Establishment</h2>
+                <p>
+                    The museum was inaugurated by President <strong>Gamal Abdel Nasser</strong> in 1959 CE, and the victory of Rosetta is celebrated every September 19th.
+                    In 1985 CE, the museum was developed and enriched with exhibits reflecting the city's history, and the surrounding garden was added to display uncovered artifacts.
+                </p>
+            </div>
+
+            <div class="detail-card">
+                <h2><i class="fas fa-archway"></i> Development and Restoration</h2>
+                <p>
+                    The house underwent comprehensive restoration as part of the Supreme Council of Antiquities' plan, along with the preparation of an integrated museum exhibition scenario.
+                    The developments include the house's floors for exhibits, the museum garden, halls for seminars and VIP visitors, and facilities for artifact restoration.
+                </p>
+            </div>
+
+            <div class="detail-card">
+                <h2><i class="fas fa-map-marked-alt"></i> Exhibits and Features</h2>
+                <p>
+                    The museum displays the history of the city of Rosetta throughout the ages, with murals showing daily life.
+                    The outdoor courtyard contains a 'sabil' (public water fountain) with a copper lattice, representing the model of sabil structures during the Ottoman era, thus combining the military, architectural, and cultural history of the city.
+                </p>
+            </div>
+
+        </section>
+
+
+        <section class="details pc">
+            <div style="width: 100%;">
+                <iframe 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3405.3943619236907!2d30.425049224935368!3d31.40325905291966!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14f6895aa99a4e0d%3A0x795d5c0a501a7a38!2z2YXYqtit2YEg2LHYtNmK2K8!5e0!3m2!1sar!2seg!4v1765465008404!5m2!1sar!2seg" 
+                    width="100%" 
+                    height="450" 
+                    style="border:0; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.1);" 
+                    allowfullscreen="" 
+                    loading="lazy" 
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
+        </section>
+
+
+        <div class="back-section">
+            <a href="../index.html#arab-kaly" class="back-btn">
+                <i class="fas fa-arrow-right"></i> Back to the Main Tour
+            </a>
+        </div>
+    </main>
+</div>
+
+
+
+
+
+    <div class="page-wrapper arabicMAIN">
         <main class="content">
             <div class="opera-frame">
                 <img src="../imgs/arab-kaly.jpg" class="opera-image">
@@ -96,6 +191,9 @@ src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3405.3943619236907!2d
             </div>
         </main>
     </div>
+
+
+                <script src="../script/nav-ish.js"></script>
 
 </body>
 </html>
