--- a/specific-tabs/bawaba-reesh.html
+++ b/specific-tabs/bawaba-reesh.html
@@ -16,6 +16,28 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+
+        <link rel="stylesheet" href="../css/headerCss.css">
+        <link rel="stylesheet" href="../css/navCss.css">
+        <link rel="stylesheet" href="../css/main.css">
+        <div style="display: flex; gap: 20px;align-items: center; z-index: 11111;">
+            <input style="position: fixed;top: 20px;left: 20px;z-index: 11111;background-color: #00a624;" type="checkbox" class="theme-toggle pc" id="themeToggle">
+            
+            <div style="z-index: 111111;left: 3rem;" class="setting-tab" id="setting-tab">
+                <h3>اللغة</h3>
+                <div style="display: flex;gap: 17px;justify-content: space-around;">
+                    <button class="arabic" onclick="addarabic()">اللغة العربية</button>
+                    <button class="english" onclick="addenglish()">english</button>
+                </div>
+                
+                <h3>الالوان</h3>
+                <div style="display: flex;gap: 17px;justify-content: space-around;">
+                    <button class="light">light</button>
+                    <button class="dark">dark</button>
+                </div>
+            </div>
+        </div>
+
     <div class="page-wrapper">
         <main class="content">
             <div class="opera-frame">
@@ -81,6 +103,74 @@ src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3453.675347426555!2d3
             </div>
         </main>
     </div>
+
+
+<div class="page-wrapper englishMAIN">
+    <main class="content">
+        <div class="opera-frame">
+            <img src="../imgs/bawaba-reesh.jpg" class="opera-image">
+        </div>
+
+        <h1 class="h11">Abu Rish Gate</h1>
+        <h1 class="h11" style="font-size: 18px;color: #494949;">بوابة أبو الريش</h1>
+        <section class="details">
+
+            <div class="detail-card">
+                <h2><i class="fas fa-landmark"></i> Abu Rish Gate</h2>
+                <p>
+                    Abu Rish Gate is one of the most prominent historical landmarks in the city of Rosetta (Rashid).
+                    It represented the western entrance and the formidable fortress of the city during the Mamluk era.
+                    The gate gained great fame for its pivotal role in repelling the English forces during the <strong>Fraser Campaign</strong>,
+                    making it a symbol of national resistance in Rosetta.
+                </p>
+            </div>
+
+            <div class="detail-card">
+                <h2><i class="fas fa-archway"></i> History and Defensive Importance</h2>
+                <p>
+                    The gate was built as part of the Rosetta Wall, which the Mamluk Sultan <strong>Qansuh al-Ghuri</strong> ordered to be constructed
+                    in the late 15th century to protect the city from naval invasions.
+                    It was considered the **Northern Gate** of the city, overlooking a strategic road used by those arriving in Rosetta.
+                    Despite its historical resilience, it currently suffers from neglect and requires urgent restoration to preserve it.
+                </p>
+            </div>
+
+            <div class="detail-card">
+                <h2><i class="fas fa-monument"></i> Surrounding Landmarks</h2>
+                <p>
+                    A group of shrines is located near the gate, most notably the <strong>Shrine of Sheikh Abu Rish</strong>,
+                    which dates back to the period before the wall itself was built, reflecting the deep spiritual dimension of the area.
+                    It is also surrounded by remnants of the old Rosetta Wall, which formed the city's first line of defense
+                    during periods of unrest and military conflicts.
+                </p>
+            </div>
+
+        </section>
+
+        <section class="details pc">
+            <div style="width: 100%;">
+                <iframe 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3453.675347426555!2d31.26486602498953!3d30.04617051848986!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1458419da089c3c7%3A0x81aa18776a5c67af!2z2KjZiNin2KjZhyDYp9io2Ygg2KfZhNix2YrYtA!5e0!3m2!1sar!2seg!4v1765464261791!5m2!1sar!2seg"            width="100%" 
+                    height="450" 
+                    style="border:0; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.1);" 
+                    allowfullscreen="" 
+                    loading="lazy" 
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
+        </section>
+
+
+        <div class="back-section">
+            <a href="../index.html#bawaba-reesh" class="back-btn">
+                <i class="fas fa-arrow-right"></i> Back to the Main Tour
+            </a>
+        </div>
+    </main>
+</div>
+
+
+            <script src="../script/nav-ish.js"></script>
 
 </body>
 </html>
