--- a/specific-tabs/eyelife.html
+++ b/specific-tabs/eyelife.html
@@ -16,6 +16,30 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+        <link rel="stylesheet" href="../css/headerCss.css">
+        <link rel="stylesheet" href="../css/navCss.css">
+        <link rel="stylesheet" href="../css/main.css">
+        <div style="display: flex; gap: 20px;align-items: center; z-index: 11111;">
+            <input style="position: fixed;top: 20px;left: 20px;z-index: 11111;background-color: #00a624;" type="checkbox" class="theme-toggle pc" id="themeToggle">
+            
+            <div style="z-index: 111111;left: 3rem;" class="setting-tab" id="setting-tab">
+                <h3>اللغة</h3>
+                <div style="display: flex;gap: 17px;justify-content: space-around;">
+                    <button class="arabic" onclick="addarabic()">اللغة العربية</button>
+                    <button class="english" onclick="addenglish()">english</button>
+                </div>
+                
+                <h3>الالوان</h3>
+                <div style="display: flex;gap: 17px;justify-content: space-around;">
+                    <button class="light">light</button>
+                    <button class="dark">dark</button>
+                </div>
+            </div>
+        </div>
+
+
+
+
     <div class="page-wrapper">
         <main class="content">
             <div class="opera-frame">
@@ -86,6 +110,78 @@ src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3460.5454567565876!2d
             </div>
         </main>
     </div>
+
+    <div class="page-wrapper englishMAIN">
+        <main class="content">
+            <div class="opera-frame">
+                <img src="../imgs/eyelife.jpg" class="opera-image">
+            </div>
+
+            <h1 class="h11">Ain El Hayat Palace</h1>
+            <h1 class="h11" style="font-size: 18px;color: #494949;">قصر عين الحياة</h1>
+            <section class="details">
+
+                <div class="detail-card">
+                    <h2><i class="fas fa-landmark"></i> Ain El Hayat Palace</h2>
+                    <p>
+                        The palace was named after Princess <strong>Ain El Hayat</strong>, daughter of Prince Ahmed Rifaat Pasha and wife of Sultan Hussein Kamel,
+                        where she resided for a period of time. The palace was also used as a residence for Khedive <strong>Tewfik</strong> during limited periods after Abdeen Palace was subjected to fires.
+                    </p>
+                </div>
+
+                <div class="detail-card">
+                    <h2><i class="fas fa-history"></i> History and Establishment</h2>
+                    <p>
+                        The palace was constructed in 1895 by the grandson of Muhammad Ali Pasha the Great to be the residence of Princess Ain El Hayat.
+                        The palace was temporarily used for official meetings and reflects the opulent character of royal palaces at that time, before suffering some neglect over time.
+                    </p>
+                </div>
+
+                <div class="detail-card">
+                    <h2><i class="fas fa-archway"></i> Area and Design</h2>
+                    <p>
+                        The palace spans an area of 24 feddans (acres) and contains 365 rooms, corresponding to the number of days in a year.
+                        It features an opulent architectural style inspired by French and English palaces, with walls carved with decorations and statues, making it a unique architectural masterpiece in Egypt.
+                    </p>
+                </div>
+
+                <div class="detail-card">
+                    <h2><i class="fas fa-map-marked-alt"></i> Current Location</h2>
+                    <p>
+                        The palace is located near the Japanese Garden, the Helwan General Hospital building, and the District Presidency.
+                        Despite being over 120 years old, the palace still retains its historical grandeur and is considered one of the largest palaces in the Republic.
+                    </p>
+                </div>
+
+            </section>
+
+
+            <section class="details pc">
+                <div style="width: 100%;">
+                    <iframe 
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3460.5454567565876!2d31.34527422499717!3d29.848539427827184!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x145837e9d30ffc71%3A0xa1a4ad39f7203f4b!2z2YLYtdixINin2YTYrtiv2YrZiNmKINiq2YjZgdmK2YI!5e0!3m2!1sar!2seg!4v1765464572235!5m2!1sar!2seg"             width="100%" 
+                        height="450" 
+                        style="border:0; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.1);" 
+                        allowfullscreen="" 
+                        loading="lazy" 
+                        referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
+                </div>
+            </section>
+
+
+            <div class="back-section">
+                <a href="../index.html#eyelife" class="back-btn">
+                    <i class="fas fa-arrow-right"></i> Back to the Main Tour
+                </a>
+            </div>
+        </main>
+    </div>
+
+
+
+
+            <script src="../script/nav-ish.js"></script>
 
 </body>
 </html>
