--- a/specific-tabs/lion.html
+++ b/specific-tabs/lion.html
@@ -16,7 +16,30 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <div class="page-wrapper">
+
+        <link rel="stylesheet" href="../css/headerCss.css">
+        <link rel="stylesheet" href="../css/navCss.css">
+        <link rel="stylesheet" href="../css/main.css">
+        <div style="display: flex; gap: 20px;align-items: center; z-index: 11111;">
+            <input style="position: fixed;top: 20px;left: 20px;z-index: 11111;background-color: #00a624;" type="checkbox" class="theme-toggle pc" id="themeToggle">
+            
+            <div style="z-index: 111111;left: 3rem;" class="setting-tab" id="setting-tab">
+                <h3>اللغة</h3>
+                <div style="display: flex;gap: 17px;justify-content: space-around;">
+                    <button class="arabic" onclick="addarabic()">اللغة العربية</button>
+                    <button class="english" onclick="addenglish()">english</button>
+                </div>
+                
+                <h3>الالوان</h3>
+                <div style="display: flex;gap: 17px;justify-content: space-around;">
+                    <button class="light">light</button>
+                    <button class="dark">dark</button>
+                </div>
+            </div>
+        </div>
+
+
+    <div class="page-wrapper arabicMAIN">
         <main class="content">
             <div class="opera-frame">
                 <img src="../imgs/lion.jpg" class="opera-image">
@@ -63,6 +86,58 @@
             </div>
         </main>
     </div>
+
+
+    <div class="page-wrapper englishMAIN">
+        <main class="content">
+            <div class="opera-frame">
+                <img src="../imgs/lion.jpg" class="opera-image">
+            </div>
+
+            <h1 class="h11">Damanhour Lion Statue</h1>
+            <h1 class="h11" style="font-size: 18px;color: #494949;">تمثال اسد دمنهور</h1>
+            <section class="details">
+
+                <div class="detail-card">
+                    <h2><i class="fas fa-paw"></i> Damanhour Lion Statue</h2>
+                    <p>
+                        An archaeological statue found in Damanhour city, considered an important example of statuary art in Ancient Egypt, and associated with the worship of deities represented by the lion.
+                    </p>
+                </div>
+
+                <div class="detail-card">
+                    <h2><i class="fas fa-history"></i> History and Origin</h2>
+                    <p>
+                        The statue is believed to date back to the period of widespread worship of lion-represented deities in Ancient Egypt, and it was found during the excavation of the railway line or in adjacent areas.
+                    </p>
+                </div>
+
+                <div class="detail-card">
+                    <h2><i class="fas fa-map-marked-alt"></i> Place of Discovery and Transfer</h2>
+                    <p>
+                        The statue was found in Damanhour city or its surrounding areas, and was moved from its original location during the renovations of the railway station to ensure its safety.
+                    </p>
+                </div>
+
+                <div class="detail-card">
+                    <h2><i class="fas fa-warehouse"></i> Current Location</h2>
+                    <p>
+                        The statue is currently preserved in the storage facilities of the Antiquities Authority in Kafr El Sheikh Governorate, where it is being maintained and protected from damage.
+                    </p>
+                </div>
+
+            </section>
+
+            <div class="back-section">
+                <a href="../index.html#lion" class="back-btn">
+                    <i class="fas fa-arrow-right"></i> Back to the Main Tour
+                </a>
+            </div>
+        </main>
+    </div>
+
+
+            <script src="../script/nav-ish.js"></script>
 
 </body>
 </html>
