--- a/specific-tabs/rashid-stone.html
+++ b/specific-tabs/rashid-stone.html
@@ -16,7 +16,37 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <div class="page-wrapper">
+
+        <link rel="stylesheet" href="../css/headerCss.css">
+        <link rel="stylesheet" href="../css/navCss.css">
+        <link rel="stylesheet" href="../css/main.css">
+        <div style="display: flex; gap: 20px;align-items: center; z-index: 11111;">
+            <input style="position: fixed;top: 20px;left: 20px;z-index: 11111;background-color: #00a624;" type="checkbox" class="theme-toggle pc" id="themeToggle">
+            
+            <div style="z-index: 111111;left: 3rem;" class="setting-tab" id="setting-tab">
+                <h3>اللغة</h3>
+                <div style="display: flex;gap: 17px;justify-content: space-around;">
+                    <button class="arabic" onclick="addarabic()">اللغة العربية</button>
+                    <button class="english" onclick="addenglish()">english</button>
+                </div>
+                
+                <h3>الالوان</h3>
+                <div style="display: flex;gap: 17px;justify-content: space-around;">
+                    <button class="light">light</button>
+                    <button class="dark">dark</button>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+
+    <div class="page-wrapper arabicMAIN">
         <main class="content">
             <div class="opera-frame">
                 <img src="../imgs/rashid-stone.JPG" class="opera-image">
@@ -63,6 +93,64 @@
             </div>
         </main>
     </div>
+
+
+    <div class="page-wrapper englishMAIN">
+        <main class="content">
+            <div class="opera-frame">
+                <img src="../imgs/rashid-stone.JPG" class="opera-image">
+            </div>
+
+            <h1 class="h11">Rashid Stone (Rosetta Stone)</h1>
+            <h1 class="h11" style="font-size: 18px;color: #494949;">حجر رشيد</h1>
+            <section class="details">
+
+                <div class="detail-card">
+                    <h2><i class="fas fa-scroll"></i> Decree of Canopus (Decree of Canopus)</h2>
+                    <p>
+                        A trilingual inscription dating back to the Ptolemaic period in Ancient Egypt, written in three writing systems: Egyptian Hieroglyphs, Demotic, and Koine Greek.
+                    </p>
+                </div>
+
+                <div class="detail-card">
+                    <h2><i class="fas fa-history"></i> Date</h2>
+                    <p>
+                        The decree records the events of a great priestly synod held in Canopus on March 7, 238 BCE, in the ninth year of the reign of Ptolemy III Euergetes.
+                    </p>
+                </div>
+
+                <div class="detail-card">
+                    <h2><i class="fas fa-archway"></i> Purpose</h2>
+                    <p>
+                        The decree honored Pharaoh Ptolemy III, his wife Queen Berenice, and their daughter Princess Berenice, and recorded the official decisions and celebrations of the priests.
+                    </p>
+                </div>
+
+                <div class="detail-card">
+                    <h2><i class="fas fa-landmark"></i> Historical Significance</h2>
+                    <p>
+                        The decree is an important historical document for understanding the religious and political administration in Ptolemaic Egypt, and illustrates the relationship between the Pharaohs, the priests, and the status of the royal family.
+                    </p>
+                </div>
+
+            </section>
+
+            <div class="back-section">
+                <a href="../index.html#rashid-stone" class="back-btn">
+                    <i class="fas fa-arrow-right"></i> Back to the Main Tour
+                </a>
+            </div>
+        </main>
+    </div>
+
+
+
+
+
+
+
+    <script src="../script/nav-ish.js"></script>
+
 
 </body>
 </html>
